Rename package fcl -> hpp-fcl
  Avoid conflict between fcl official version as installed by ROS and
  modified version of hpp.

--- a/doc/algorithm.html.in
+++ b/doc/algorithm.html.in
@@ -30,7 +30,7 @@
       <table class="pkglist">
 	<tr>
 	  <td>
-	    <a href="@FCL_LINK@">Flexible collision library</a>
+	    <a href="@FCL_LINK@">Modified version of Flexible collision library</a>
 	  </td>
 	  <td>Collision detection and distance computation,</td>
 	</tr>
