--- a/configure.ac
+++ b/configure.ac
@@ -76,7 +76,7 @@ pkg_list="$pkg_list $2"
 ])
 
 # List packages.
-JRL_GENERATELINK([FCL], [fcl])
+JRL_GENERATELINK([HPPFCL], [hpp-fcl])
 JRL_GENERATELINK([HPPMODEL], [hpp-model])
 JRL_GENERATELINK([HPPMODELURDF], [hpp-model-urdf])
 JRL_GENERATELINK([HPPCORE], [hpp-core])
