Add link to hpp-manipulation-urdf

--- a/configure.ac
+++ b/configure.ac
@@ -85,6 +85,7 @@ JRL_GENERATELINK([HPPCONSTRAINTS], [hpp-constraints])
 JRL_GENERATELINK([HPPWHOLEBODYSTEP], [hpp-wholebody-step])
 JRL_GENERATELINK([HPPWHOLEBODYSTEPCORBA], [hpp-wholebody-step-corba])
 JRL_GENERATELINK([HPPMANIPULATION], [hpp-manipulation])
+JRL_GENERATELINK([HPPMANIPULATIONURDF], [hpp-manipulation-urdf])
 JRL_GENERATELINK([HPPMANIPULATIONCORBA], [hpp-manipulation-corba])
 JRL_GENERATELINK([HPPROS], [hpp_ros])
 JRL_GENERATELINK([HPPTUTORIAL], [hpp_tutorial])
