--- a/doc/Makefile
+++ b/doc/Makefile
@@ -18,34 +18,34 @@ hpp-fcl_repository=${HPP_REPO}
 hpp-util_branch=master
 hpp-util_repository=${HPP_REPO}
 
-hpp-model_branch=ubuntu-14.04
+hpp-model_branch=devel
 hpp-model_repository=${HPP_REPO}
 
-hpp-model-urdf_branch=ubuntu-14.04
+hpp-model-urdf_branch=devel
 hpp-model-urdf_repository=${HPP_REPO}
 
-hpp-statistics_branch=ubuntu-14.04
+hpp-statistics_branch=devel
 hpp-statistics_repository=${HPP_REPO}
 
-hpp-core_branch=master
+hpp-core_branch=devel
 hpp-core_repository=${HPP_REPO}
 
 hpp-template-corba_branch=master
 hpp-template-corba_repository=${LAAS_REPO}
 
-hpp-corbaserver_branch=master
+hpp-corbaserver_branch=devel
 hpp-corbaserver_repository=${HPP_REPO}
 
-hpp-constraints_branch=ubuntu-14.04
+hpp-constraints_branch=devel
 hpp-constraints_repository=${HPP_REPO}
 
 hpp-wholebody-step_branch=master
 hpp-wholebody-step_repository=${HPP_REPO}
 
-hpp-wholebody-step-corba_branch=master
+hpp-wholebody-step-corba_branch=devel
 hpp-wholebody-step-corba_repository=${HPP_REPO}
 
-test-hpp_branch=master
+test-hpp_branch=devel
 test-hpp_repository=${HPP_REPO}
 
 hrp2_branch=groovy
@@ -60,10 +60,10 @@ robot_capsule_urdf_repository=${LAAS_REPO}
 robot_model_py_branch=groovy
 robot_model_py_repository=${LAAS_REPO}
 
-hpp-doc_branch=master
+hpp-doc_branch=devel
 hpp-doc_repository=${HPP_REPO}
 
-hpp-manipulation_branch=ubuntu-14.04
+hpp-manipulation_branch=devel
 hpp-manipulation_repository=${HPP_REPO}
 
 tinyxml2_branch=master
@@ -72,7 +72,7 @@ tinyxml2_repository=${TINYXML2_REPO}
 hpp-manipulation-urdf_branch=master
 hpp-manipulation-urdf_repository=${HPP_REPO}
 
-hpp-manipulation-corba_branch=master
+hpp-manipulation-corba_branch=devel
 hpp-manipulation-corba_repository=${HPP_REPO}
 
 robot_state_chain_publisher_branch=master
@@ -81,7 +81,7 @@ robot_state_chain_publisher_repository=${HPP_REPO}
 iai_maps_branch=master
 iai_maps_repository=${HPP_REPO}
 
-hpp_tutorial_branch=master
+hpp_tutorial_branch=devel
 hpp_tutorial_repository=${HPP_REPO}
 
 hpp_benchmark_branch=master
@@ -96,10 +96,10 @@ gepetto-viewer_repository=${HPP_REPO}
 gepetto-viewer-corba_branch=master
 gepetto-viewer-corba_repository=${HPP_REPO}
 
-hpp-gepetto-viewer_branch=master
+hpp-gepetto-viewer_branch=devel
 hpp-gepetto-viewer_repository=${HPP_REPO}
 
-OpenSceneGraph-3.2.1_extra_flags= -DCOLLADA_DYNAMIC_LIBRARY=${DEVEL_DIR}/install/lib/libcollada14dom.so -DCOLLADA_INCLUDE_DIR=${DEVEL_DIR}/install/include/collada-dom
+OpenSceneGraph-3.2.1_extra_flags= -DCOLLADA_DYNAMIC_LIBRARY=${DEVEL_DIR}/install/lib/libcollada14dom.so -DCOLLADA_INCLUDE_DIR=${DEVEL_DIR}/install/include/collada-dom -DLIB_POSTFIX=""
 
 all: hpp_tutorial.install \
 	hpp-gepetto-viewer.install
@@ -243,9 +243,9 @@ eigen3.checkout:
 		echo "$(@:.checkout=) already checkout out."; \
 	else \
 		wget -O eigen3.tar.bz2 \
-		http://bitbucket.org/eigen/eigen/get/3.2.1.tar.bz2;\
+		http://bitbucket.org/eigen/eigen/get/3.2.4.tar.bz2;\
 		cd ${SRC_DIR}; bunzip2 eigen3.tar.bz2; tar xvf eigen3.tar;\
-		rm -f eigen3.tar; mv eigen-eigen-6b38706d90a9 eigen3;\
+		rm -f eigen3.tar; mv eigen-eigen-10219c95fe65 eigen3;\
 	fi
 
 eigen3.configure: eigen3.configure.dep
